eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2 #pods
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 285768857761.dkr.ecr.us-east-1.amazonaws.com/simplebank:a75c224ec4503045a8f196c814bd828398f70920:latest
        ports:
        - containerPort: 8080
